--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
     <title>Quiz</title>
 </head>
 <body>
@@ -52,6 +53,7 @@
                 </li>
             </ul>
         </div>
+<!--
         <div class="main__box main__box_question">
             <form class="main__form-question" data-count="1/10">
                 <fieldset>
@@ -108,6 +110,7 @@
             </div>
             <button class="main__btn result__return">К списку квизов</button>
         </div>
+    -->
     </main>
 </body>
 </html>
